Update README.md with an exemple of quoted params